--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,3 @@
-<<<<<<< HEAD
-models_semantic/*.index filter=lfs diff=lfs merge=lfs -text
-=======
 *.7z filter=lfs diff=lfs merge=lfs -text
 *.arrow filter=lfs diff=lfs merge=lfs -text
 *.bin filter=lfs diff=lfs merge=lfs -text
@@ -36,5 +33,5 @@ saved_model/**/* filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.zst filter=lfs diff=lfs merge=lfs -text
 *tfevents* filter=lfs diff=lfs merge=lfs -text
->>>>>>> 0229c24 (initial commit)
+*.index filter=lfs diff=lfs merge=lfs -text
 models_semantic/* filter=lfs diff=lfs merge=lfs -text
