fix: remove hdbscan from requirements.txt and disable clustering
- hdbscan cannot compile on HF Spaces (GCC compatibility issues)
- Removed from requirements.txt to fix Docker build
- Commented out clustering step in GitHub Actions workflow
- Made 03.build_topics_hdbscan.py detect and skip if hdbscan not installed
- Added HDBSCAN_OPTIONAL.md documentation
- Core functionality (harvest, FAISS indexing, recommendations) works without hdbscan
- Clustering is now optional and only for local use

--- a/.github/workflows/update_repositories.yml
+++ b/.github/workflows/update_repositories.yml
@@ -68,12 +68,13 @@ jobs:
           python scripts/02.semantic_indexer.py
           echo "✅ FAISS index updated"
       
-      - name: Cluster topics (HDBSCAN)
-        if: steps.harvest.outputs.new_items > 0 || github.event.inputs.force_full_reindex == 'true'
-        run: |
-          echo "📊 Clustering topics with HDBSCAN..."
-          python scripts/03.build_topics_hdbscan.py
-          echo "✅ Topics clustered"
+      # HDBSCAN clustering deshabilitado (no compatible con HF Spaces)
+      # - name: Cluster topics (HDBSCAN)
+      #   if: steps.harvest.outputs.new_items > 0 || github.event.inputs.force_full_reindex == 'true'
+      #   run: |
+      #     echo "📊 Clustering topics with HDBSCAN..."
+      #     python scripts/03.build_topics_hdbscan.py
+      #     echo "✅ Topics clustered"
       
       - name: Commit and push changes
         if: steps.harvest.outputs.new_items > 0 || github.event.inputs.force_full_reindex == 'true'
